--- a/style.css
+++ b/style.css
@@ -5,24 +5,23 @@
     font-family: 'Outfit', sans-serif;
 }
 
-html{
-    font-size: 62.5%;
-}
-
-section{
+main{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 98vh;
+    min-height: 98vh;
 }
 
-.attribution{
-    height: 2vh;
+footer{
+    width: 100vw;
+    position: absolute;
+    bottom: 0;
+    margin: 0 auto;
 }
 
 .main-container{
     width: 1440px;
-    height: 900px;
+    min-height: 900px;
     background: hsl(212, 45%, 89%);
     display: flex;
     align-items: center;
@@ -53,30 +52,30 @@ section{
     margin-top: 25px;
     text-align: center;
     font-weight: 700;
-    font-size: 22px;
+    font-size: calc(22rem/16);
     color: hsl(218, 44%, 22%);
 }
 
 .caption{
     text-align: center;
-    font-size: 15px;
+    font-size: calc(15rem/16);
     margin-top: 20px;
     font-weight: 500;
     color: hsl(220, 15%, 55%);
     margin-bottom: 25px;
 }
 
-@media(max-width: 375px){
+@media(max-width: 1366px){
     .main-container{
         width: 100vw;
+        min-height: 98vh;
+    }
+
+    main{
         height: 100%;
     }
 
-    section{
-        height: 96vh;
-    }
-
-    .attribution{
-        max-height: 4vh;
+    footer{
+        min-height: 2vh;
     }
 }
