--- a/style.css
+++ b/style.css
@@ -5,11 +5,21 @@
     font-family: 'Outfit', sans-serif;
 }
 
-main{
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 98vh;
+    height: 100vh;
+}
+
+main{
+    width: 1440px;
+    height: 900px;
+    background: hsl(212, 45%, 89%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 10px 18px 0 rgba(0,0,0,0.22);
 }
 
 footer{
@@ -17,16 +27,6 @@ footer{
     position: absolute;
     bottom: 0;
     margin: 0 auto;
-}
-
-.main-container{
-    width: 1440px;
-    min-height: 900px;
-    background: hsl(212, 45%, 89%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 1px 10px 18px 0 rgba(0,0,0,0.22);
 }
 
 .card-container{
@@ -66,16 +66,8 @@ footer{
 }
 
 @media(max-width: 1366px){
-    .main-container{
-        width: 100vw;
-        min-height: 98vh;
-    }
-
     main{
-        height: 100%;
-    }
-
-    footer{
-        min-height: 2vh;
+        height: 100vh;
+        width: 100vw;
     }
 }
