--- a/style.css
+++ b/style.css
@@ -67,8 +67,16 @@ footer{
 }
 
 @media(max-width: 1366px){
+    body{
+        flex-direction: column;
+    }
+
     main{
         height: 100vh;
         width: 100vw;
+    }
+
+    footer{
+        position: static;
     }
 }
